# g09DNNTSBuilder

./: .gitignore  CMakeLists.txt  CMakeLists_Gator.txt  CMakeLists_dustin.txt  CMakeLists_gator.txt  CMakeLists_mordor.txt  README.md  dnntsbuilder.cbp  gtest.com
Working/: input.ipt
include/: internalcoordinate.h  randnormflt.h
lib/: libgomp.so.1  libstdc++.so.6
src/: INSTALL  configure_install  errorhandlers.h  main.cpp  validatedata.cpp
src/containers/: internalcontainers.h
src/core/: ssbuilder.cpp  ssbuilder.h  tsbuilder.cpp  tsbuilder.h  tsnmbuilder.cpp  tsnmbuilder.h
src/handlers/: atom_masses.h  g09functions.hpp  input.cpp  input.h  internalcoordinate.cpp  internalcoordinate.h
src/utils/: conservation.cpp  conservation.h  flaghandler.h  input.h  micro_timer.cpp  micro_timer.h  randnormflt.h  readers.h  readinput.h  simpletools.hpp  systools.hpp
working/: input.ipt
